--- a/core/inc/global.html
+++ b/core/inc/global.html
@@ -1,2 +1,2 @@
 
-<script src="http://ofpstaticdev.app.lefile.cn/test/tool.min.js"></script>
+<script src="http://ofpstaticdev.app.lefile.cn/test/tool.min.js?v=2"></script>
