--- a/core/inc/global.html
+++ b/core/inc/global.html
@@ -1,2 +1,4 @@
 
+<!-- the path will be relpaced to the static server -->
+
 <script src="http://ofpstaticdev.app.lefile.cn/test/tool.min.js?v=2"></script>
